--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -21,10 +21,10 @@
                             <img src="/img/logo-klein.png" alt="Haus der Sonne">
                             <ul>
                                 <li>
-                                    <a href="#" style="color: lightgray;">{{ T "AGoal" }}</a>
+                                    <a href="wirUeberUns/Ziel">{{ T "AGoal" }}</a>
                                 </li>
                                 <li>
-                                    <a href="derVerein/Organisation">{{ T "AOrganization" }}</a>
+                                    <a href="wirUeberUns/derVorstand">{{ T "AOrganization" }}</a>
                                 </li>
                                 <li>
                                     <a href="#" style="color: lightgray;">{{ T "ATransparency" }}</a>
