--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -26,9 +26,9 @@
                                 <li>
                                     <a href="wirUeberUns/derVorstand">{{ T "AOrganization" }}</a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a href="#" style="color: lightgray;">{{ T "ATransparency" }}</a>
-                                </li>
+                                </li> -->
                                 <li>
                                     <a href="Finanzen">{{ T "AFinance" }}</a>
                                 </li>
@@ -38,9 +38,9 @@
                                 <li>
                                     <a href="wirUeberUns/Presse">{{ T "APress" }}</a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a href="#" style="color: lightgray;">{{ T "AChronicle" }}</a>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
@@ -110,8 +110,71 @@
                                 <li>
                                     <a href="Galerie/Videos">{{ T "wwDVideos" }}</a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a href="#" style="color: lightgray;">{{ T "wwDChronicle" }}</a>
+                                </li> -->
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="has-submenu">
+            <a href="#" class="menu-title">{{ T "cooperations" }}</a>
+            <div class="submenu-container-colRight">
+                <div class="submenu">
+                    <h3>
+                        {{ T "CooperationSubHead" }}
+                    </h3>
+                    <div class="colums">
+                        <div class="submenu-column">
+                            <h4>{{ T "CoopSubCol1" }}</h4>
+                            <img class="img-wide" src="/img/GSK.png" alt="Gesamtschule Kempen">
+                            <ul>
+                                <li>
+                                    <a href="#" style="color: lightgray;">{{ T "CoopGSKEvents" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#" style="color: lightgray;">{{ T "CoopGSKLessons" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#" style="color: lightgray;">{{ T "CoopGSKGalerie" }}</a>
+                                </li>
+                                <li>
+                                    <a href="https://www.gesamtschule-kempen.de/">{{ T "CoopGSKLink" }}</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="submenu-column">
+                            <h4>{{ T "CoopSubCol2" }}</h4>
+                            <img class="img-wide" src="/img/HAG.png" alt="Hannah-Arendt-Gymnasium">
+                            <ul>
+                                <li>
+                                    <a href="#" style="color: lightgray;">{{ T "CoopHAGEvents" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#" style="color: lightgray;">{{ T "CoopHAGLessons" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#" style="color: lightgray;">{{ T "CoopHAGGalerie" }}</a>
+                                </li>
+                                <li>
+                                    <a href="https://hag-krefeld.de/">{{ T "CoopHAGLink" }}</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="submenu-column">
+                            <h4>{{ T "CoopSubCol3" }}</h4>
+                            <img class="img-wide" src="/img/GSM.png" alt="Gesamtschule Mühlheim">
+                            <ul>
+                                <li>
+                                    <a href="#" style="color: lightgray;">{{ T "CoopGSMEvents" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#" style="color: lightgray;">{{ T "CoopGSMGalerie" }}</a>
+                                </li>
+                                <li>
+                                    <a href="https://www.gustav-mh.de/">{{ T "CoopGSMLink" }}</a>
                                 </li>
                             </ul>
                         </div>
