--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -323,7 +323,8 @@
 
 .light-theme .submenu .colums .img-wide {
   vertical-align: bottom;
-  margin-top: 0px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   height: 40px;
   width: auto; }
 
@@ -491,7 +492,8 @@
 
 .dark-theme .submenu .colums .img-wide {
   vertical-align: bottom;
-  margin-top: 0px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   height: 40px;
   width: auto; }
 
@@ -577,7 +579,15 @@
   .light-theme .submenu .colums img {
     display: none; }
   .light-theme .mega-menu-container h4 {
-    display: none; }
+    margin-top: 0px;
+    margin-bottom: 0px;
+    height: 1rem;
+    padding-top: 5px;
+    padding-right: 20px;
+    padding-left: 5px;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    background-color: rgba(255, 255, 255, 0.956); }
   .light-theme .mega-menu-container h3 {
     display: none; }
   .light-theme .hoverCheck {
@@ -619,9 +629,10 @@
     background-color: white;
     color: black;
     border-width: 1px;
-    border-style: solid; }
+    border-style: solid;
+    border-top: 1px; }
   .light-theme .mega-menu ul li ul {
-    padding-bottom: 0px;
+    padding-bottom: 5px;
     margin: 0px; }
   .light-theme .mega-menu ul li ul li a {
     color: black; }
@@ -670,7 +681,7 @@
     box-shadow: none; }
   .light-theme .submenu .colums ul li {
     padding-left: 0px;
-    margin: 5px 10px;
+    margin: 0px 10px;
     position: inherit; }
   .light-theme .submenu .colums ul li::before {
     content: "";
@@ -706,7 +717,15 @@
   .dark-theme .submenu .colums img {
     display: none; }
   .dark-theme .mega-menu-container h4 {
-    display: none; }
+    margin-top: 0px;
+    margin-bottom: 0px;
+    height: 1rem;
+    padding-top: 5px;
+    padding-right: 20px;
+    padding-left: 5px;
+    border-right: 1px solid lightgrey;
+    border-left: 1px solid lightgrey;
+    background-color: rgba(255, 255, 255, 0.956); }
   .dark-theme .mega-menu-container h3 {
     display: none; }
   .dark-theme .hoverCheck {
@@ -748,9 +767,10 @@
     background-color: #575651;
     color: lightgrey;
     border-width: 1px;
-    border-style: solid; }
+    border-style: solid;
+    border-top: 1px; }
   .dark-theme .mega-menu ul li ul {
-    padding-bottom: 0px;
+    padding-bottom: 5px;
     margin: 0px; }
   .dark-theme .mega-menu ul li ul li a {
     color: lightgrey; }
@@ -799,7 +819,7 @@
     box-shadow: none; }
   .dark-theme .submenu .colums ul li {
     padding-left: 0px;
-    margin: 5px 10px;
+    margin: 0px 10px;
     position: inherit; }
   .dark-theme .submenu .colums ul li::before {
     content: "";
