--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,7 @@
 {{ define "main" }}
+<meta name="baseurl" content="{{ .Site.BaseURL }}">
+<meta name="siteLanguage" content="{{ .Site.Language }}">
+
 <div id="js-theme-single" class="light-theme">
   <div id="js-single" class="single">
     <a href="/" class="logo">
