--- a/assets/scss/common-styles/markdown.scss
+++ b/assets/scss/common-styles/markdown.scss
@@ -370,4 +370,46 @@
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         text-align: center;
     }
+
+    // *******************************************************
+    // ** Button Gezielt Spenden
+    // *******************************************************
+    .div-gezielt-spenden {
+        position: relative;
+    }
+    
+    .button-gezielt-spenden {
+        position: absolute;
+        top: -80px;
+        right: 10px;
+        // bottom: 20px;
+        // right: 20px;
+        background: themed("logo-red");
+        border: 1px solid themed("text-main-menu");
+        border-radius: 50%;
+        color: themed("text-main-menu");
+        cursor: pointer;
+        font-size: 1em;
+        height: 120px;
+        width: 120px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        text-transform: uppercase;
+        transition: transform 0.15s ease, box-shadow 0.15s ease;
+    }
+
+    .button-gezielt-spenden:hover {
+        transform: scale(1.1);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    }
+    
+    .button-gezielt-spenden:active {
+        transform: scale(0.95);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    }
+    
+    .button-gezielt-spenden:focus {
+        outline: none;
+    }
 }
