--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -3298,6 +3298,38 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center; }
 
+.light-theme .div-gezielt-spenden {
+  position: relative; }
+
+.light-theme .button-gezielt-spenden {
+  position: absolute;
+  top: -80px;
+  right: 10px;
+  background: #ce1126;
+  border: 1px solid white;
+  border-radius: 50%;
+  color: white;
+  cursor: pointer;
+  font-size: 1em;
+  height: 120px;
+  width: 120px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-transform: uppercase;
+  transition: transform 0.15s ease, box-shadow 0.15s ease; }
+
+.light-theme .button-gezielt-spenden:hover {
+  transform: scale(1.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
+
+.light-theme .button-gezielt-spenden:active {
+  transform: scale(0.95);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
+
+.light-theme .button-gezielt-spenden:focus {
+  outline: none; }
+
 .dark-theme button {
   border: none;
   text-align: center;
@@ -3573,6 +3605,38 @@
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center; }
+
+.dark-theme .div-gezielt-spenden {
+  position: relative; }
+
+.dark-theme .button-gezielt-spenden {
+  position: absolute;
+  top: -80px;
+  right: 10px;
+  background: #730b17;
+  border: 1px solid grey;
+  border-radius: 50%;
+  color: grey;
+  cursor: pointer;
+  font-size: 1em;
+  height: 120px;
+  width: 120px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-transform: uppercase;
+  transition: transform 0.15s ease, box-shadow 0.15s ease; }
+
+.dark-theme .button-gezielt-spenden:hover {
+  transform: scale(1.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
+
+.dark-theme .button-gezielt-spenden:active {
+  transform: scale(0.95);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
+
+.dark-theme .button-gezielt-spenden:focus {
+  outline: none; }
 
 .light-theme .div-donate-paypal {
   width: 200px; }
