--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -96,7 +96,7 @@
                                     <a href="#" style="color: lightgray;">{{ T "wwDEnvironment" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#" style="color: lightgray;">{{ T "wwDOrphanages" }}</a>
+                                    <a href="HilfeZurSelbsthilfe/Waisenhaeuser">{{ T "wwDOrphanages" }}</a>
                                 </li>
                             </ul>
                         </div>
