--- a/assets/scss/common-styles/markdown.scss
+++ b/assets/scss/common-styles/markdown.scss
@@ -412,4 +412,20 @@
     .button-gezielt-spenden:focus {
         outline: none;
     }
+
+    
+    // *******************************************************
+    // ** Video
+    // *******************************************************
+    // .video-container {
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     height: 400px; /* Höhe des Containers */
+    // }
+    
+    // video {
+    //     max-width: 100%;
+    //     height: auto;
+    // }
 }
