--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -38,9 +38,27 @@
                                 <li>
                                     <a href="wirUeberUns/Presse">{{ T "APress" }}</a>
                                 </li>
+                                <li>
+                                    <a href="wirUeberUns/Veranstaltungen">{{ T "AEvents" }}</a>
+                                </li>
                                 <!-- <li>
                                     <a href="#" style="color: lightgray;">{{ T "AChronicle" }}</a>
                                 </li> -->
+                            </ul>
+                        </div>
+                        <div class="submenu-column">
+                            <h4>{{ T "aboutSubCol2" }}</h4>
+                            <img src="/img/cooperations.png" alt="Kooperationen">
+                            <ul>
+                                <li>
+                                    <a href="GesamtschuleKempen">{{ T "AGesamtSchKempen" }}</a>
+                                </li>
+                                <li>
+                                    <a href="HannahArendtGymnasiumKrefeld">{{ T "AHAGymnKrefeld" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#" style="color: lightgray;">{{ T "AGesamtSchMühlheim" }}</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -78,6 +96,9 @@
                                     <a href="Bildung/Nachhilfe">{{ T "wwDTutoring" }}</a>
                                 </li>
                                 <li>
+                                    <a href="#" style="color: lightgray;">{{ T "wwDTraining" }}</a>
+                                </li>
+                                <li>
                                     <a href="Bildung/Aufklaerung">{{ T "wwDEnlightenment" }}</a>
                                 </li>
                             </ul>
@@ -93,7 +114,7 @@
                                     <a href="HilfeZurSelbsthilfe/Nutztiere">{{ T "wwDAnimals" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#" style="color: lightgray;">{{ T "wwDEnvironment" }}</a>
+                                    <a href="HilfeZurSelbsthilfe/Umwelt">{{ T "wwDEnvironment" }}</a>
                                 </li>
                                 <li>
                                     <a href="HilfeZurSelbsthilfe/Waisenhaeuser">{{ T "wwDOrphanages" }}</a>
@@ -119,7 +140,7 @@
                 </div>
             </div>
         </li>
-        <li class="has-submenu">
+        <!-- <li class="has-submenu">
             <a href="#" class="menu-title">{{ T "cooperations" }}</a>
             <div class="submenu-container-colRight">
                 <div class="submenu">
@@ -181,7 +202,7 @@
                     </div>
                 </div>
             </div>
-        </li>
+        </li> -->
         <li  class="has-submenu">
             <a href="#" class="menu-title">{{ T "toHelp" }}</a>
             <div class="submenu-container-colRight">
