--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -3337,6 +3337,12 @@
   cursor: pointer;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
 
+.light-theme .img-centered-quarter {
+  width: calc(var(--image-width) / 4);
+  margin-top: 10px;
+  margin-bottom: 0px;
+  margin-left: calc(var(--image-margin) + 3 * var(--image-width) / 8); }
+
 .light-theme .img-caption {
   display: block;
   width: var(--image-width);
@@ -3500,6 +3506,27 @@
 .light-theme .button-gezielt-spenden:focus {
   outline: none; }
 
+.light-theme .container-button-link {
+  text-align: center; }
+
+.light-theme .button-link {
+  display: inline-block;
+  padding: 5px 24px;
+  background-color: rgba(252, 209, 22, 0.6);
+  color: blue;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: bold;
+  transition: background-color 0.3s ease; }
+
+.light-theme .button-link:hover {
+  background-color: #fcd116; }
+
+.light-theme .p-width {
+  width: calc(var(--image-width));
+  margin-left: calc(var(--image-margin));
+  text-align: justify; }
+
 .dark-theme button {
   border: none;
   text-align: center;
@@ -3644,6 +3671,12 @@
   transition: transform 0.15s ease, z-index 0.15s;
   cursor: pointer;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+
+.dark-theme .img-centered-quarter {
+  width: calc(var(--image-width) / 4);
+  margin-top: 10px;
+  margin-bottom: 0px;
+  margin-left: calc(var(--image-margin) + 3 * var(--image-width) / 8); }
 
 .dark-theme .img-caption {
   display: block;
@@ -3807,6 +3840,27 @@
 
 .dark-theme .button-gezielt-spenden:focus {
   outline: none; }
+
+.dark-theme .container-button-link {
+  text-align: center; }
+
+.dark-theme .button-link {
+  display: inline-block;
+  padding: 5px 24px;
+  background-color: rgba(83, 69, 4, 0.6);
+  color: blue;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: bold;
+  transition: background-color 0.3s ease; }
+
+.dark-theme .button-link:hover {
+  background-color: #534504; }
+
+.dark-theme .p-width {
+  width: calc(var(--image-width));
+  margin-left: calc(var(--image-margin));
+  text-align: justify; }
 
 .light-theme .div-donate-paypal {
   width: 200px; }
